add section component

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: black;
-  color: azure;
+  background-color: white;
+  color: black;
   margin: 45vh auto;
 }
