--- a/src/components/Phonebook/Phonebook.css
+++ b/src/components/Phonebook/Phonebook.css
@@ -7,29 +7,37 @@
   background-color: navy;
 }
 
-h2 {
-  color: white;
-}
-
 input {
+  display: block;
+  margin: 10px auto;
   width: 200px;
   height: 20px;
-  border-radius: 10px;
-  margin-bottom: 10px;
-  margin-left: 10px;
+  border-radius: 5px;
+  padding: 5px 10px;
+  text-align: center;
 }
 
 button {
   padding: 5px 10px;
-  width: auto;
-  height: auto;
   border-radius: 1px;
   background-color: white;
   color: black;
 }
 
-label {
+.AddContact__Btn {
   display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  background-color: rgb(255, 207, 51);
+  border-radius: 2px;
+}
+button:hover {
+  background-color: rgb(31, 159, 218);
+}
+
+label {
+  display: inline-block;
+  margin: 0 auto;
+  text-align: left;
   color: white;
-  padding: 0px;
 }
