add delete function

--- a/src/components/ContactList/ContactList.css
+++ b/src/components/ContactList/ContactList.css
@@ -2,14 +2,14 @@
   display: block;
   margin: 10px auto;
   padding: 7px 15px;
-  width: 20vw;
+  width: max-content;
   border-radius: 5px 5px;
   border-color: navy;
   border-width: 1px;
   border-style: solid;
 }
 
-.contactText {
+/* .contactText {
   color: navy;
   font-size: large;
   font-weight: 500;
@@ -17,7 +17,8 @@
 
 .contactDeleteBtn {
   margin-left: 20px;
-  /* border: 1px solid navy; */
+  border: 0;
   border-radius: 2px;
   background-color: rgb(255, 207, 51);
-}
+  cursor: pointer;
+} */
