--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,4 +1,4 @@
-.Phonebook__Form {
+.ContactForm {
   display: block;
   margin: 0 auto;
   padding: 15px;
@@ -22,6 +22,7 @@ button {
   border-radius: 1px;
   background-color: white;
   color: black;
+  cursor: pointer;
 }
 
 .AddContact__Btn {
@@ -30,6 +31,7 @@ button {
   margin-top: 10px;
   background-color: rgb(255, 207, 51);
   border-radius: 2px;
+  border: 0;
 }
 button:hover {
   background-color: rgb(31, 159, 218);
