--- a/src/components/ContactList/ContactList.css
+++ b/src/components/ContactList/ContactList.css
@@ -1,10 +1,16 @@
 .contactItem {
-  display: block;
+  display: flex;
+  justify-content: space-between;
   margin: 10px auto;
   padding: 7px 15px;
-  width: max-content;
+  width: 25vw;
   border-radius: 5px 5px;
   border-color: navy;
   border-width: 1px;
   border-style: solid;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
